--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -102,8 +102,8 @@ h2 {
   <tr>
     <th>ID</th>
     <th>Nome</th>
-    <th>Salário Bruto</th>
-    <th>Salário Líquido</th>
+    <th>Salário Bruto  (R$)</th>
+    <th>Salário Líquido (R$)</th>
     <th>Departamento</th>
   </tr>
   {{#each employees}}
